--- a/YarnGuardian/YarnGuardian.csproj
+++ b/YarnGuardian/YarnGuardian.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="EasyModbusTCP" Version="5.6.0" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="MySql.Data" Version="9.3.0" />
       <PackageReference Include="NetMQ" Version="4.0.1.15" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
